# wolf_controller_core

./: CMakeLists.txt  README.md  package.xml
include/wolf_controller_core/: common.h  controller_core.h  force_estimator.h  impedance.h  state_estimator.h  state_machine.h  terrain_estimator.h
include/wolf_controller_core/devices/: interface.h  joy.h  keyboard.h  ros.h  twist.h
include/wolf_controller_core/wpg/: com_planner.h  foot_state_machine.h  foot_trajectory_ellipse.h  foot_trajectory_interface.h  footholds_planner.h  gait_generator.h
plotjuggler/: controller.xml
scripts/: keyboard_node  plot_foot_trajectories.m
src/: controller_core.cpp  force_estimator.cpp  impedance.cpp  state_estimator.cpp  state_machine.cpp  terrain_estimator.cpp
src/wpg/: com_planner.cpp  foot_state_machine.cpp  foot_trajectory_ellipse.cpp  foot_trajectory_interface.cpp  footholds_planner.cpp  gait_generator.cpp
