<?xml version="1.0" encoding="UTF-8"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>wolf_controller_core</name>
  <version>0.1.5</version>
  <description>WoLF: Whole-body Locomotion Framework for quadruped robots. This package contains the whole-body controller.</description>

  <maintainer email="gennaro.raiola@gmail.com">Gennaro Raiola</maintainer>

  <license>CC BY-NC-ND 4.0</license>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>roscpp</depend>
  <depend>tf</depend>
  <depend>tf_conversions</depend>
  <depend>controller_interface</depend>
  <depend>wolf_hardware_interface</depend>
  <depend>realtime_tools</depend>
  <depend>ddynamic_reconfigure</depend>
  <depend>message_runtime</depend>
  <depend>rt_logger</depend>
  <depend>wolf_msgs</depend>
  <depend>wolf_estimation</depend>
  <depend>wolf_controller_utils</depend>
  <depend condition="$rt_gui_FOUND == True">rt_gui</depend>
  <depend condition="$ocs2_msgs_FOUND == True">ocs2_msgs</depend>
  <depend>rospy</depend>

  <test_depend>controller_manager</test_depend>
  <test_depend>hardware_interface</test_depend>
  <test_depend>rostest</test_depend>
  <test_depend>wolf_hardware_interface</test_depend>

</package>
