<?xml version="1.0" encoding="UTF-8"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>wolf_controller_core</name>
  <version>0.1.5</version>
  <description>WoLF: Whole-body Locomotion Framework for quadruped robots. This package contains the whole-body controller.</description>

  <maintainer email="gennaro.raiola@gmail.com">Gennaro Raiola</maintainer>

  <license>CC BY-NC-ND 4.0</license>

    <buildtool_depend condition="$ROS_VERSION == 2">ament_cmake</buildtool_depend>
    <buildtool_depend condition="$ROS_VERSION == 1">catkin</buildtool_depend>

    <depend>wolf_wbid</depend>
    <depend>wolf_estimation</depend>
    <depend>wolf_controller_utils</depend>
    <depend condition="$rt_gui_FOUND == True">rt_gui</depend>
    <depend condition="$rt_logger_FOUND == True">rt_logger</depend>

    <export>
      <build_type condition="$ROS_VERSION == 2">ament_cmake</build_type>
      <build_type condition="$ROS_VERSION == 1">catkin</build_type>
    </export>

</package>
